[package]
name          = "basic_stochastics"
version       = "0.1.0"
authors       = ["phenomax <phenomax@panascais.io"]
license       = "MIT/Apache-2.0"
description   = "A small collection of utilities to make performing basic stochastic calculations more convenient"
keywords      = ["maths", "math", "calculate", "stochastics", "variance", "average", "vectors"]

[dependencies]
